2011-04-30  Ken Brown  <kbrown@cornell.edu>

	* Makefile.cygwin: Add 'clean' target.
	* Makefile.linux: Ditto.
	* TODO: Update.
	* cosettable.h: Change constructor parameters to vectors of
	strings instead of words.
	* cossettable.cc: Change constructor accordingly.  Move string
	manipulations for Felsch to here from tcf.cc.  For Felsch, add
	[original] relators to generators of H.
	* tcf.cc:  Move 'rotate' from here to gens_and_words.
	(getgroup): Remove string manipulations.
	* gens_and_words.cc: Move 'rotate' here.
	* gens_and_words.h: Declare it.
	* tc.cc: Accommodate changed CosetTable constructor.
	* tc+.cc: Ditto.

2011-04-28  Ken Brown  <kbrown@cornell.edu>

	* examples/M12.in: Fix whitespace.
	* examples/M12+.in: New file; input for tc+.
	* tcf.cc: New file (for Felsch).
	* cosettable.h (CosetTable): Add member 'relator_grouped', used by
	Felsch algorithm.  Add corresponding parameter to constructor.
	* cosettable.cc: Adapt constructor to change above.
	* stack.cc: New file; implementation of deduction stack for
	Felsch.
	* stack.h: New file; declarations for deduction stack.
	* main.cc: Rename to...
	* tc.cc: New file.
	* main+.cc: Rename to...
	* tc+.cc: New file.
	* Makefile.cygwin: Adapt to name changes; add rules for tcf and
	stack.
	* Makefile.linux: Ditto.

2011-04-27  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc (lookahead): Remove comment.

2011-04-25  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc: Clean up some comments.
	(get_nlive, lookahead): Compute get_size() before starting loop.
	* TODO: Update.

2011-04-23  Ken Brown  <kbrown@cornell.edu>

	* Version 0.1 released.

2011-04-23  Ken Brown  <kbrown@cornell.edu>

	* README: New file.
	* INSTALL: Ditto.
	* main.cc (main): Tweak output.
	* main+.cc (main): Ditto.
	* TODO: Update

2011-04-22  Ken Brown  <kbrown@cornell.edu>

	* TODO: Update.
	* main.cc (main): Fix test for whether to print table.
	* main+.cc (main): Ditto.

2011-04-22  Ken Brown  <kbrown@cornell.edu>
